[package]
name = "rovarust"
version = "0.1.0"
authors = ["David Cole <david.cole1340@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.2", default-features = false, features = ["client", "gateway", "http", "rustls_backend", "model", "voice"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5.8"
serde = "1.0"